--- a/hugo.toml
+++ b/hugo.toml
@@ -125,7 +125,7 @@ languageName = "English"
   # Search config
   # 搜索配置
   [params.search]
-    enable = false
+    enable = true
     # type of search engine ["lunr", "algolia"]
     # 搜索引擎的类型 ["lunr", "algolia"]
     type = "lunr"
